<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enigmas_quest</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">Enigmas_quest</string>
    <string name="create_account">Créer un compte</string>
    <string name="mail_login">Pseudo/Mail</string>
    <string name="password_login">Mot de passe</string>
    <string name="connect_login">Connexion</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="score_stats">Score : </string>
    <string name="questions_asked_stats">Nombre de questions répondues : </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_account_nom">password</string>
    <string name="create_account_email">pseudo</string>
    <string name="action_example">Example action</string>
    <string name="hello_world">Hello world!</string>
    <string name="textViewPhoto">Ouhhaa, il est temps de faire une petite photo.</string>
    <string name="photoDescription">Photo de la partie</string>
    <string name="buttonPhoto">Prendre la photo</string>
    <string name="buttonPhotoClose">Envoyer la photo</string>
    
    <string name="error_account_email">Entrez un pseudo valide</string>
    <string name="error_account_password">Entrer un mot de passe</string>

    <string name="dialog_enigma_success">Bonne réponse ! +1</string>
    <string name="dialog_enigma_failure">Echec ! 0</string>
    <string name="dialog_enigma_late">Temps écoulé</string>
    <string name="dialog_enigma_ok">OK</string>
    
    
    <string name="title_activity_create_account">Création de compte</string>
    <string name="title_activity_photo">Prise de photo</string>
    <string name="title_activity_map_">Enigma Quest</string>
    <string name="title_activity_enigma">Enigme !</string>
    <string name="title_activity_battle">Duel !</string>
</resources>
